--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
 		"rimraf": "^3.0.2",
 		"rndstr": "^1.0.0",
 		"rxjs": "^6.6.3",
-		"typeorm": "^0.2.31"
+		"typeorm": "^0.2.31",
+		"vite": "^2.0.1"
 	},
 	"devDependencies": {
 		"@nestjs/cli": "^7.5.1",
